@@ -1,3 +1,10 @@
+2012-10-26  Christian Groessler  <chris@groessler.org>
+
+	* z8kgen.c (struct op): Fix encoding for translate opcodes (trdb,
+	trdrb, trib, trirb, trtdb, trtdrb, trtib, trtirb).  Remove
+	non-existing opcode trtrb.
+	* z8k-opc.h: Regenerate.
+
 2012-10-26  Alan Modra  <amodra@gmail.com>
 
 	* ppc-opc (powerpc_opcodes): "lfdp" and "stfdp" use DS offset.
