@@ -1,3 +1,9 @@
+2012-10-26  Christian Groessler  <chris@groessler.org>
+
+	* gas/z8k/z8k.exp: Run translate-ops test.
+	* gas/z8k/translate-ops.s: New file.
+	* gas/z8k/translate-ops.d: New file.
+
 2012-10-26  Alan Modra  <amodra@gmail.com>
 
 	* gas/ppc/power4.s: Fix invalid lq offsets.
